--- a/styles.css
+++ b/styles.css
@@ -57,10 +57,11 @@ a:hover {
 
 header {
   text-align: center;
-  background: url('images/portland.jpg') no-repeat top center ;
+  background: url('images/goiânia.jpg') no-repeat top center ;
   background-size: cover;
   overflow: hidden;
   padding-top: 60px;
+  transition: all .5s;
 }
 header {
   line-height: 1.5;
@@ -99,7 +100,7 @@ header .profile-image:hover {
   transition: all .5s;
 }
 .card:hover {
-  border-color: #ff99ff;
+  border-color: #7cc76a;
 }
 
 ul.skills {
@@ -205,3 +206,25 @@ a.social:hover {
 
 }
 
+header .profile-image-experience {
+  display: inline-block;
+  background-image: url(images/me.jpg);
+  background-size: cover;
+  margin-top: 50px;
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  border: 3px solid white;
+  transition: all .5s;
+}
+header .profile-image-experience:hover {
+  transform: scale(1.2) rotate(5deg);
+  background: url(images/me-hobby.jpg);
+  background-size: cover;
+}
+
+header:has(.profile-image-experience:hover) {
+  /* transform: scale(1.2) rotate(5deg); */
+  background: url(images/concert.jpg);
+  background-size: cover;
+}
