--- a/styles.css
+++ b/styles.css
@@ -305,3 +305,16 @@ details > summary {
 .header-hobby {
   box-shadow: 0 0 6px 0 #727171;
 }
+
+/* contacts.html style */
+
+.card-contact {
+  margin: 30px;
+  padding: 20px 40px 40px;
+  max-width: 1000px;
+  text-align: left;
+  background: #fff;
+  border-bottom: 4px solid #ccc;
+  border-radius: 6px;
+  transition: all .5s;
+}
