--- a/styles.css
+++ b/styles.css
@@ -318,3 +318,39 @@ details > summary {
   border-radius: 6px;
   transition: all .5s;
 }
+
+.container-icons-vik {
+  display: flex;
+  justify-content: center;
+  padding-top: 32px;
+  gap: 8px;
+  flex-wrap: wrap;
+}
+
+.vik-icon {
+  width: 48px;
+  height: 48px;
+  opacity: 0;
+  transition: all .2s;
+}
+
+.start-icon:hover + .vik-icon {
+  opacity: 1;
+}
+
+.vik-icon:hover + img {
+  opacity: 1;
+}
+
+.steam-contact {
+  opacity: 0;
+  transition: all .2s;
+}
+
+#vik-last:hover + .steam-contact {
+  opacity: 1;
+}
+
+.steam-contact:hover {
+  opacity: 1;
+}
